# reconization_traffic_detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: tests.yml
data/: README.md  sample_traffic.csv
docs/: github-workflow.md
src/traffic_nb/: __init__.py  predict.py  train.py
tests/: test_pipeline.py
