[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malicious-traffic-naive-bayes"
version = "0.1.0"
description = "Naive Bayes baseline for malicious network traffic classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2",
  "joblib>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
pretty = true